--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
         <meta name="author" content="" />
         <title>Manija Corp Mineria</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="..\src\assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="src\css\styles.css" rel="stylesheet" />
         <!-- BG Particleground-->
-        <script type='text/javascript' src='../jquery.particleground.js'></script>
-        <script type='text/javascript' src='js/demo.js'></script>
+        <script type='text/javascript' src='jquery.particleground.js'></script>
+        <script type='text/javascript' src='src\js\demo.js'></script>
 
 
     </head>
     <body>
         <!-- Masthead-->
         <header class="masthead" id="particles">
-            <img src="..\src\assets\img\manija.png" alt="" id="manija">
-            <img src="..\src\assets\img\manija2.png" alt="" id="manija2">
+            <img src="src\assets\img\manija.png" alt="" id="manija">
+            <img src="src\assets\img\manija2.png" alt="" id="manija2">
             <div id="intro">
             <div class="container position-relative">
                 
@@ -107,21 +107,21 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('src/assets/img/bg-showcase-1.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Manija mina por Usted!</h2>
                         <p class="lead mb-0">Con la inversion de una sola placa de video, manija conseguira el mejor proveedor a precio mayorista y minara por usted en un pool comun generando rentabilidad en cripto. Usted no abonara nada mas: la placa pagara su propio alquiler y generara ganancias semanales. Si usted no esta convencido puede venir y retirar su placa cuando quiera!</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('src/assets/img/bg-showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Convierta pesos en Criptos!</h2>
                         <p class="lead mb-0">Compre packs a partir de 25 MegaHash, paguelo en 12 cuotas en pesos sin interes y deje que su inversion se pague sola. En 2021 el peso Argentino se devaluo 50%, pero Ethereum subio 400% en Dolares!</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('src/assets/img/bg-showcase-3.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Entre al mundo Cripto!</h2>
                         <p class="lead mb-0">Manija es una comunidad de entusiastas con ganas de aprender de criptos. Unase a nuestra comunidad para participar de reuniones bimestrales, apreder mas de este mundo y hacer contactos. Tenga acceso a traders para cambiar sus criptos a pesos o dolares cuando usted quiera!</p>
@@ -136,21 +136,21 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="src/assets/img/testimonials-1.jpg" alt="..." />
                             <h5>PMS Capitales</h5>
                             <p class="font-weight-light mb-0">"Primer broker oficial de criptomonedas del oeste Argentino"</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="src/assets/img/testimonials-2.jpg" alt="..." />
                             <h5>Kripton Market</h5>
                             <p class="font-weight-light mb-0">"Vende y compra productos o servicios su marketplace usando criptomonedas"</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="src/assets/img/testimonials-3.jpg" alt="..." />
                             <h5>UnderCode</h5>
                             <p class="font-weight-light mb-0">"Comunidad de desarrolladores de UnderCode (MDZ)"</p>
                         </div>
@@ -238,7 +238,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="src\js\scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
